# kafkamion

./: .gitignore  README.md  docker-compose.yaml
config/hive/: hive-site.xml
config/trino/catalog/: hive.properties
merger/: Cargo.toml
merger/src/: config.rs  consumer.rs  main.rs  models.rs
merger/src/models/: driver.rs  entity.rs  mod.rs  position.rs  report.rs  time_registration.rs  truck.rs
merger/src/resource/: application.config
producer/: Cargo.toml
producer/src/: README.md  main.rs
producer/src/cli/: mod.rs  scenarios.rs
producer/src/events/: driver.rs  mod.rs  position.rs  time_registration.rs  truck.rs
producer/src/kafka/: mod.rs
saver/: .template.env  Cargo.toml
saver/src/: main.rs
saver/src/models/: messages.rs
