[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
fake = { version = "3.0.1", features = ["derive", "geo"] }
serde = { version = "1.0.217", features = ["derive"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde_json = "1.0.135"
uuid = { version = "1.11.1", features = ["fast-rng", "macro-diagnostics", "v4"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "registry", "std"]}
tracing = "0.1.40"
chrono = "0.4.39"
rand = "0.8.5"
futures = "0.3.31"

