[package]
name = "saver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
fake = { version = "3.1.0", features = ["derive"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
uuid = { version = "1.11.1", features = ["fast-rng", "macro-diagnostics", "v4"] }
chrono = "0.4.39"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "6.0"
aws-sdk-s3 = { version = "1.68.0", features = ["behavior-version-latest"]}
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "saver-input"
path = "src/bin/saver-input.rs"

[[bin]]
name = "saver"
path = "src/bin/saver.rs"
